--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -17,4 +17,4 @@ jobs:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_SALA_DE_JUEGOS_RODRIGUEZROIG }}
           channelId: live
-          projectId: sala-de-juegos-rodriguezroig
+          projectId: clinica
