--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,6 @@
 {
   "hosting": {
-    "public": "dist/tp1-juegos/browser",
+    "public": "dist/clinica/browser",
     "ignore": [
       "firebase.json",
       "**/.*",
