--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "date-fns": "^4.1.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "ng-recaptcha": "^13.2.1",
     "ngx-toastr": "^19.0.0",
     "pdfmake": "^0.2.15",
